fix: mention avatar of the logged in user is getting squished

--- a/source/features/small-user-avatars.css
+++ b/source/features/small-user-avatars.css
@@ -1,7 +1,7 @@
 .rgh-mention-avatar::before {
 	content: '';
 	display: inline-block;
-	width: 16px;
+	width: 16px !important;
 	height: 16px;
 	margin-right: 0.2em;
 	border-radius: 50%;
